# gnupg-windows-libgcrypt

./: CMakeLists.txt  libgcrypt-config.h.in  sys_time.h.in
cipher/: cipher-ccm.c  cipher-poly1305.c  stribog.c
random/: jitterentropy-base.c
src/: gcrypt.h.in  hwf-x86.c
tests/: basic.c  bench-slope.c  benchmark.c
